<resources>
    <string name="app_name">Conse</string>
    <string name="gmaps_sms">http://maps.google.com/?q=%1$s,%2$s</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="start_video">Ver video</string>
    <string name="register_tittle">Completa tu perfil:</string>
    <string name="name_et_hint">Tus nombres</string>
    <string name="name_et_last_name">Tus apellidos</string>
    <string name="name_et_birth_date_hint">DÍA/MES/AÑO</string>
    <string name="birth_date_tittle_h2">Fecha de nacimiento</string>
    <string name="document_tittle_h2">Documento de identidad</string>
    <string name="document_number_et_last_name">Número de documento</string>
    <string name="gender_tittle_h2">Género</string>
    <string name="is_nrc_beneficiary_checkbox">Soy beneficiario de los programas NRC</string>
    <string name="account_tittle_h2">Usuario Conse</string>
    <string name="pasword_et_last_name">Contraseña, 8 caracteres</string>
    <string name="password">Contraseña</string>
    <string name="email_et_hint">Correo electrónico</string>
    <string name="ethnic_group_tittle_h2">Grupo étnico</string>
    <string name="geographic_location_tittle_h2">Localizacion geográfica</string>
    <string name="condition_tittle_h2">Condición</string>
    <string name="origin_town_tittle_h2">Municipio</string>
    <string name="user_profile_tittle_h2">Perfil del usuario</string>
    <string name="accept_terms_conditions_checkbox1">Acepto los </string>
    <string name="accept_terms_conditions_checkbox2">términos, condiciones, políticas de privacidad y de tratamiento de datos</string>
    <string name="accept_terms_conditions_checkbox3">del NRC</string>
    <string name="getting_app_conf">Obteniendo configuración de aplicación</string>
    <string name="select_hint">Selecciona</string>
    <string name="must_fill_field">Debe diligenciar este campo</string>
    <string name="must_select_option">Debe seleccionar una opción</string>
    <string name="you_must_accept_t_c">Debes aceptar términos y condiciones</string>
    <string name="must_complete_information">Debe completar información</string>
    <string name="registering_user">Registrando usuario...</string>
    <string name="add_contacts_tittle">Configura el botón de alerta</string>
    <string name="add_contact_message">Ingrese de 1 a 3 contactos</string>
    <string name="contact_no_has_number">El contacto no tiene número telefónico</string>
    <string name="error">Respuesta incorrecta</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_alert_tittle">Haz una prueba de funcionamiento</string>
    <string name="send_alert_indications">MANTÉN PULSADO EL BOTÓN PARA ENVIAR</string>
    <string name="send_alert_touch_message_example"> Ahora eres mi contacto de emergencia. Esta es una prueba. Estoy ubicado en </string>
    <string name="send_alert_touch_tittle">¿Estás seguro de enviar esta alerta?</string>
    <string name="send_alert_success">Tu alerta ha sido enviada con éxito</string>
    <string name="select_avatar_message">Inicia por escoger el género, después, podrás definir las características físicas que más te gusten para tu Consejero o Consejera ¡Será quien te acompañe mientras usas la aplicación!</string>
    <string name="select_avatar_tittle">Arma tu Conse</string>
    <string name="let_start_message">Hola soy tu Conse y voy a estar acompañándote en este recorrido. Traigo mucha información y herramientas que me gustaría compartir contigo</string>
    <string name="let_start_tittle">¡Iniciemos!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="home_tittle">Selecciona un curso para comenzar</string>
    <string name="missing_avatar_selection">Falta seleccionar una parte del ávatar</string>
    <string name="confirm_password_et">Confirmar contraseña</string>
    <string name="password_not_matches">Las contraseñas no coinciden</string>
    <string name="vbg_course_start_message">Recibe la bienvenida al curso, prepárate para conocer la respuesta a preguntas como: ¿Qué es violencia de género?, ¿Todas las violencias son iguales?, ¿Dónde puedo encontrar ayuda? ¡Adelante! ¡Inicia el recorrido y resuelve tus dudas!</string>
    <string name="vbg_course_start_tittle">Atención y Prevención \n de Violencia \n Basada en Género</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_10">10</string>
    <string name="number_11">11</string>
    <string name="course_1_1_a">¿Qué son las Violencias Basadas en Género</string>
    <string name="course_1_1_b">Son aquellas \r\nformas de violencia que \r\n se ejercen contra una persona por su condición de género o sexo, y que responden a relaciones \r\ndesiguales de poder entre \r\nhombres y mujeres</string>
    <string name="course_1_1_c">Guia divulgadora de ONU Mujeres</string>
    <string name="course_1_1_d">La VBG puede ser ejercida conra personas que no se adecuan a lo esperado por la sociedad según su sexo, como es el caso de personas con orientación sexual diversa (gays, lebianas, y bisexuales) o con identidad de género diversa (transexuales), pero se ejerce principalmente contra mujeres, niñas y adolecentes, de alli que cuando se hable de violencia de g´nero, se asocie mayormente con violencia contra las mujeres</string>
    <string name="course_1_1_e">¡Ahora sí, estás lista para iniciar!</string>
    <string name="course_1_2_a">¿Cómo saber si soy víctima de violencia?</string>
    <string name="course_1_2_b">El prmer paso para identificar si eres vícitma de violencia es tener claro ¿qué se entiende por violencia contra las mujeres?</string>
    <string name="course_1_2_c">La ley define la violencia contra las mujeres como:</string>
    <string name="course_1_2_d">"Cualquier acción u omisión, que le cause muerte, daño o sufrimiento fisico, sexual, psicologico, economico o patrimonial por su condición de mujer, así como las amenazas de tales actos, la coacción o la privación arbitraria de la libertad, bien sea que se presente en el ámbito público o privado"</string>
    <string name="course_1_2_e">(Ley 1257/08, art.2).</string>
    <string name="course_1_2_f">Módulo 1</string>
    <string name="course_1_3_a">¿Cómo saber si soy victima de violencia?</string>
    <string name="course_1_3_b">Según la ley, la violencia contra las mujeres presenta las siguientes caracteristicas</string>
    <string name="course_1_3_1_c">Te ocurre por ser mujer. Esto significa que ser mujer es lo que te pone en riesgo</string>
    <string name="course_1_3_2_c">Te puede ocurrir a ti o a cualquier mujer, no hay excepciones.</string>
    <string name="course_1_3_3_c">Es un delito y por lo tanto merece un castigo o pena.</string>
    <string name="course_1_3_4_c">Puede ocasionarte un daño, sufrimiento o muerte. También incluye las amenazas de cometer esos hechos.</string>
    <string name="course_1_3_5_c">Se puede presetar en cualquier tipo de espacio público o privado dónde desarolles tus actividades.</string>
    <string name="course_1_4_a">Conoce cada uno de los ámbitos donde se presenta la violencia.</string>
    <string name="course_1_4_b">Pulsa sobre el triángulo dentro del circulo para escuchar la descripción de cada uno de los ámbitos</string>
    <string name="course_1_4_1_a">En la familia</string>
    <string name="course_1_4_2_a">En la comunidad</string>
    <string name="course_1_4_3_a">En el ámbito estatal</string>
    <string name="course_1_4_4_a">En el conflicto armado</string>
    <string name="course_1_5_a">Si crees ser victima de violencia en el marco del conflicto armado hay varios factores adicionales que debes tener en cuenta, revisa la siguiente infografia con información sobre el tema:</string>
    <string name="course_1_5_b">La corte constitucional reconoció que las mujeres, por su condición de mujeres, en el conflicto armado enfrentan riesgos diferentes a los que viven los hombres. Estos son:</string>
    <string name="course_1_5_c">Esclavización o explotación para realizar lores considerados como femeninos y labores de la casa como cocinar, lavar o cuidar enfermos.</string>
    <string name="course_1_5_d">Reclutamiento forzado de tus hijos e hijas por grupos armado ilegales</string>
    <string name="course_1_5_e">Señalamientos o venganzas por tu relación o contacto con integrantes de algún grupo armado.</string>
    <string name="course_1_5_f">Riesgos por tu labor de liderazgo o pertenencia a una organización comunitaria, social o politica</string>
    <string name="course_1_5_g">Persecución y asesinato por la imposición de normas de comportamiento relacionadas con el vestuario, horarios y relaciones personales</string>
    <string name="course_1_5_h">Despojo de tierras y del patrimonio</string>
    <string name="course_1_5_i">Pertenencia a una comunidad indigena o afrocolombiana</string>
    <string name="course_1_5_j">Perdida y ausencia del compañero o esposo durante el desplazamiento</string>
    <string name="course_1_5_k">Explotación minera ilegal</string>
    <string name="course_1_5_l">Identidad y orientación de género diversa.</string>
    <string name="course_1_6_a">Otro aspecto a tener en cuentra es que, aunque no existe un listado de hechos que se consideren violentos contra las mujeres, la ley describe que las siguientes modalidades mediante las cuales se puede manifestar violencia en cualquiera de los espacios mensionados anteriormente</string>
    <string name="course_1_6_b">Los siguientes son los tipos de violencia a los que estan expuestas las mujeres; conocerlos te puede ayudar a identificar si eres victima. Pulsa sobre el triangulo dentro del circulo para escuchar el audio con su descripción</string>
    <string name="course_1_7_a">Violencia física</string>
    <string name="course_1_7_b">Violencia sexual</string>
    <string name="course_1_7_c">Violencia psicológica</string>
    <string name="course_1_7_d">Violencia economica o patrimonial</string>
    <string name="course_1_7_e">Por último, pero no menos importante, adopta los siguientes consejos como leyes inquebrantables para tu vida diaria</string>
    <string name="course_1_8_a">Nunca olvides que...</string>
    <string name="cancel">Cancelar</string>
    <string name="department">Departamento</string>
    <string name="lideres_12_02">
Responsabilidades de las instituciones en la prevención y protección
    </string>
    <string name="lideres_19_01">Selecciona una o varias respuestas según lo consideres necesario
    </string>
    <string name="lideres_19_02">1. ¿Qué entidades tienen responsabilidades directas en la estrategia de prevención? Revisa el siguiente listado y haz clic sobre las opciones que consideres acertadas.
    </string>
    <string name="lideres_19_03">Contaduría General de la Nación
    </string>
    <string name="lideres_19_04">Prosperidad Social
    </string>
    <string name="lideres_19_05">Policía Nacional
    </string>
    <string name="lideres_19_06">Procuraduría General de la Nación
    </string>
    <string name="lideres_19_07">Centro Nacional de Memoria Histórica
    </string>
    <string name="lideres_19_08">Alcaldías
    </string>
    <string name="lideres_19_09">Contraloría General de la Nación
    </string>
    <string name="lideres_19_10">Defensoría del Pueblo
    </string>
</resources>