<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tag="has_questionary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/bottom_padding_for_alert"
            android:paddingTop="@dimen/padding_top_for_courses">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black_overlay"/>

            <TextView
                android:text="@string/lideres_12_02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CourseModuleTittle" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black_overlay"/>


            <TextView
                android:text="@string/lideres_19_01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CourseParagraphText"
                android:gravity="center_horizontal"
                android:layout_marginLeft="@dimen/courses_margin_left"
                android:layout_marginRight="@dimen/courses_margin_right" />


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/paper_background_margine_left"
                android:layout_marginRight="@dimen/paper_background_margine_right"
                android:background="@drawable/hoja_l19"
                android:paddingTop="35dp"
                android:tag="questionary_container"
                android:layout_marginTop="30dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">


                <TextView
                    android:text="@string/lideres_19_02"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CourseParagraphTextBold"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="@dimen/check_box_margin"
                    android:layout_marginRight="@dimen/check_box_margin" />

                <CheckBox
                    android:text="@string/lideres_19_03"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ConseCheckboxBlackLetter"
                    android:layout_marginLeft="@dimen/paper_checkbox_margin_left" />
                <CheckBox
                    android:text="@string/lideres_19_04"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ConseCheckboxBlackLetter"
                    android:layout_marginLeft="@dimen/paper_checkbox_margin_left" />
                <CheckBox
                    android:text="@string/lideres_19_05"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ConseCheckboxBlackLetter"
                    android:tag="correct_option"
                    android:layout_marginLeft="@dimen/paper_checkbox_margin_left" />

                <CheckBox
                    android:text="@string/lideres_19_06"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ConseCheckboxBlackLetter"
                    android:tag="correct_option"
                    android:layout_marginLeft="@dimen/paper_checkbox_margin_left" />

                <CheckBox
                    android:text="@string/lideres_19_07"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ConseCheckboxBlackLetter"
                    android:layout_marginLeft="@dimen/paper_checkbox_margin_left" />

                <CheckBox
                    android:text="@string/lideres_19_08"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ConseCheckboxBlackLetter"
                    android:tag="correct_option"
                    android:layout_marginLeft="@dimen/paper_checkbox_margin_left" />

                <CheckBox
                    android:text="@string/lideres_19_09"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ConseCheckboxBlackLetter"
                    android:layout_marginLeft="@dimen/paper_checkbox_margin_left" />

                <CheckBox
                    android:text="@string/lideres_19_10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ConseCheckboxBlackLetter"
                    android:tag="correct_option"
                    android:layout_marginLeft="@dimen/paper_checkbox_margin_left" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="15dp" >

                    <Button
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:id="@+id/bt_previous"
                        android:background="@drawable/button_back"
                        android:onClick="onClick" />


                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="56dp"
                        android:id="@+id/bt_finish"
                        android:background="@drawable/button_ready"
                        android:layout_marginLeft="20dp"
                        android:onClick="onClick"
                        android:tag="L_MOD_2_Q1" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</LinearLayout>