<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/padding_top_bar"
    android:background="@color/grey_light">
    <!--tools:context="conse.nrc.org.co.consejo.Activities.Register"-->


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/bottom_padding_for_alert">

            <TextView
                android:text="@string/register_tittle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_profile_tittle"
                style="@style/ConseTittleTextH1"
                android:layout_marginBottom="20dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="@dimen/iv_bottom_margin"
                android:id="@+id/fl_edit_avatar_frame">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bt_avatar_edit"
                    android:background="@drawable/button_edit_avatar"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_vertical|center_horizontal" />

                <FrameLayout
                    android:id="@+id/fl_avatar"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:translationZ="5dp">

                </FrameLayout>

            </FrameLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bt_contact_edit"
                android:background="@drawable/button_edit_contact_list"
                android:layout_marginBottom="@dimen/iv_bottom_margin"
                android:layout_marginTop="@dimen/iv_top_margin"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/name_et_hint"
                    android:ems="10"
                    android:id="@+id/et_name"
                    style="@style/ConseExitText"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/name_et_last_name"
                    android:ems="10"
                    android:id="@+id/et_last_name"
                    style="@style/ConseExitText"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/et_contact_phone"
                    android:ems="10"
                    android:id="@+id/et_contact_phone"
                    style="@style/ConseExitText"
                    />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <TextView
                    android:text="@string/birth_date_tittle_h2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ConseTittleTextH2" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:hint="@string/name_et_birth_date_hint"
                    android:ems="10"
                    android:editable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:id="@+id/et_birthdate"
                    style="@style/ConseExitText"
                    android:drawableRight="@drawable/flecha"
                    android:focusableInTouchMode="false" />
            </LinearLayout>


            <TextView
                android:text="@string/gender_tittle_h2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ConseTittleTextH2"
                android:visibility="gone"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sp_gender"
                android:background="@null"
                android:visibility="gone"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/account_tittle_h2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ConseTittleTextH2" />


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_et_hint"
                    android:ems="10"
                    android:id="@+id/et_email"
                    style="@style/ConseExitText"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pasword_et_last_name"
                    android:ems="10"
                    android:id="@+id/et_password"
                    style="@style/ConseExitText"
                    android:inputType="textWebPassword" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password_et"
                    android:ems="10"
                    android:id="@+id/et_confirm_password"
                    style="@style/ConseExitText"
                    android:inputType="textWebPassword" />

            </LinearLayout>

            <CheckBox
                android:text="@string/is_nrc_beneficiary_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cb_is_nrc_beneficiary"
                style="@style/ConseCheckboxGrayBackgroun"
                android:visibility="gone"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/ly_nrc_data"
                android:visibility="gone">

                <TextView
                    android:text="@string/document_tittle_h2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ConseTittleTextH2" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sp_document_type"
                    android:background="@null"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/document_number_et_last_name"
                    android:ems="10"
                    android:id="@+id/et_document_number"
                    style="@style/ConseExitText" />

                <TextView
                    android:text="@string/ethnic_group_tittle_h2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ConseTittleTextH2" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sp_ethnic_group"
                    android:background="@null" />

                <TextView
                    android:text="@string/department"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ConseTittleTextH2" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sp_state"
                    android:background="@null"/>

                <TextView
                    android:text="@string/origin_town_tittle_h2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ConseTittleTextH2" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sp_origin_town"
                    android:background="@null"/>

                <TextView
                    android:text="@string/condition_tittle_h2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ConseTittleTextH2" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sp_condition_type"
                    android:background="@null" />

                <TextView
                    android:text="@string/user_profile_tittle_h2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ConseTittleTextH2" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sp_user_profile"
                    android:background="@null" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:id="@+id/ly_term_cond">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cb_accept_terms_conditions"
                    style="@style/ConseCheckboxGrayBackgroun"
                    android:layout_marginBottom="0dp"
                    android:paddingBottom="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="5dp" />

                <TextView
                    android:text="@string/accept_terms_conditions_checkbox1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_terms_text"
                    style="@style/ConseParagraphText"
                    android:layout_marginTop="0dp"
                    android:textColor="@color/grey_dark"
                    android:layout_marginLeft="0dp" />
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bt_register"
                android:background="@drawable/button_go_to_register"
                android:layout_marginBottom="@dimen/iv_bottom_margin"
                android:layout_marginTop="@dimen/iv_top_margin"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal" />


        </LinearLayout>
    </ScrollView>
</RelativeLayout>
