<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:minWidth="450dp"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:background="@color/white">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/campana"
        android:layout_marginTop="20dp" />

    <TextView
        android:text="@string/send_alert_touch_tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="normal|italic"
        style="@style/ConseTittleTextH2"
        android:gravity="center_horizontal" />

    <TextView
        android:text="@string/send_alert_touch_message_example"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_message"
        style="@style/ConseTittleTextH1"
        android:layout_marginTop="30dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bt_yes_sure"
        android:background="@drawable/siestoysegurohover"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp" />

    <TextView
        android:text="@string/send_alert_indications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ConseParagraphText"
        android:textStyle="normal|bold"
        android:gravity="center_horizontal"
        android:textColor="@color/salmon"
        android:layout_marginBottom="15dp" />

    <TextView
        android:text="@string/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_cancel"
        style="@style/ConseTittleTextH2"
        android:textColor="@android:color/holo_blue_light"
        android:gravity="center_horizontal"
        android:layout_marginBottom="15dp" />
</LinearLayout>